--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,1 +1,20 @@
-
+version: 1.0.{build}
+image: Visual Studio 2017
+configuration:
+- Debug
+- Release
+build:
+  verbosity: normal
+before_package:
+- ps: Copy-Item C:\projects\AppVeyorResearch\Game_Files\$env:CONFIGURATION\Motor2D.exe C:\projects\AppVeyorResearch\Game_Files\Game\.
+artifacts:
+- path: Game
+  name: game_files
+deploy:
+- provider: GitHub
+  description: Auto-generated release
+  auth_token:
+    secure: EvCROCHCyi5Cm+1FwVbr1SIMpOV5bJdHMpixBlH6XmwyFd84y34dHiF9nsx7QohQ
+  draft: true
+  prerelease: false
+  
