--- a/appveyor.yml
+++ b/appveyor.yml
@@ -5,7 +5,7 @@ configuration:
 build:
   verbosity: normal
 before_package:
-- ps: Copy-Item C:\projects\AppVeyor-Research\$env:CONFIGURATION\Motor2D.exe C:\projects\AppVeyor-Research\Game_Files\Game
+- ps: Copy-Item C:\projects\AppVeyor-Research\$env:CONFIGURATION\Motor2D.exe C:\projects\AppVeyor-Research\Game_Files\Game\.
 artifacts:
 - path: Game
   name: game_files
